refactor (user) user roles management
