# routes/api/v1.php
@@ -24,6 +24,11 @@ Route::prefix('auth')->group(function (){
 
 // user
 Route::apiResource('users',UserController::class)->middleware('auth:sanctum');
+Route::middleware('auth:sanctum')->controller(UserController::class)
+    ->prefix('users')->group(function (){
+        Route::get('/{user}/roles','roles');
+        Route::put('/{user}/roles','syncRoles');
+    });
 
 // role
 Route::middleware('auth:sanctum')->controller(RoleController::class)
